feat: Add elementType attribute to perks and occultism paths for enhanced categorization